--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import os\n",
     "import cv2\n",
     "\n",
-    "base_path = '/home/lol/训练数据/深度学习-布料库-加强版-整理/'\n",
+    "base_path = '/home/lol/训练数据/加强/'\n",
     "\n",
     "base_featrue_list = np.load(os.path.join(base_path, 'tensorflow-feature.npy'))\n",
     "base_class_name_list = np.load(os.path.join(base_path, 'tensorflow-class_name.npy'))\n",
@@ -26,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getDistOfL2(form, to):\n",
@@ -49,8 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getRank(test_featrue):\n",
@@ -66,26 +70,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.83 s, sys: 7.82 ms, total: 6.84 s\n",
-      "Wall time: 6.85 s\n"
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10341/DSC06392.webp ['10341' '10341' '14415' ..., '14084' '16271' '14084']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10341/DSC06393.webp ['10341' '10341' '10341' ..., '14072' '14072' '14072']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10341/DSC06394.webp ['10341' '10341' '10341' ..., '12652' '12652' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10341/DSC06395.webp ['10341' '10341' '10341' ..., '11699' '11699' '11699']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10341/DSC06396.webp ['10341' '10341' '10341' ..., '5055' '12652' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10341/DSC06397.webp ['10341' '10341' '10341' ..., '4757' '14086' '14086']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10341/DSC06398.webp ['10341' '10341' '2242' ..., '12652' '12652' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06358.webp ['10345' '10345' '10343' ..., '2735' '10370' '2735']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06359.webp ['10345' '10345' '10345' ..., '2735' '2735' '2735']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06360.webp ['10345' '10345' '10345' ..., '12652' '12540' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06361.webp ['10345' '10345' '1960' ..., '4691' '4724' '4724']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06362.webp ['10345' '10345' '10345' ..., '4690' '4691' '4691']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06363.webp ['10345' '10345' '10345' ..., '2735' '2735' '2735']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06364.webp ['10345' '10345' '2362' ..., '4693' '4689' '4475']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06365.webp ['10345' '10345' '10345' ..., '4411' '4411' '4411']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10345/DSC06366.webp ['10345' '10345' '10345' ..., '12653' '12653' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10354/DSC06273.webp ['10354' '10354' '10347' ..., '16253' '16253' '16253']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10354/DSC06274.webp ['10354' '10354' '10343' ..., '8594' '10158' '8594']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10354/DSC06275.webp ['10354' '10354' '10343' ..., '12652' '12652' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10354/DSC06276.webp ['10354' '10354' '6525' ..., '12652' '12652' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10354/DSC06277.webp ['10354' '10354' '10341' ..., '4724' '15998' '15998']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10354/DSC06278.webp ['10354' '10354' '14417' ..., '11376' '16281' '16281']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10354/DSC06279.webp ['10354' '10354' '10345' ..., '7526' '7526' '7526']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10499/DSC08761.webp ['10499' '10499' '10499' ..., '14077' '14077' '14077']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10499/DSC08762.webp ['10499' '10499' '10499' ..., '14077' '16259' '16259']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10499/DSC08763.webp ['10499' '10499' '10499' ..., '14072' '14072' '14072']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10499/DSC08765.webp ['5308' '5308' '5308' ..., '15992' '11337' '13864']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10592/DSC07075.webp ['14329' '14329' '15868' ..., '12594' '12594' '14072']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10592/DSC07077.webp ['10592' '10592' '840' ..., '14077' '4541' '14077']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10625/DSC07260.webp ['10625' '10625' '10625' ..., '1825' '11275' '3763']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10626/DSC07264.webp ['10626' '10626' '10626' ..., '13827' '2354' '11886']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10626/DSC07265.webp ['10626' '10626' '10626' ..., '11588' '11588' '11588']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10627/DSC07269.webp ['10627' '10627' '10627' ..., '6649' '16262' '16262']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10627/DSC07270.webp ['10627' '10627' '10629' ..., '16259' '16259' '16256']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10628/DSC07274.webp ['10628' '10628' '10628' ..., '13839' '12607' '12607']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10628/DSC07275.webp ['10628' '10628' '10628' ..., '5541' '3748' '5541']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10629/DSC07279.webp ['10629' '10629' '10629' ..., '13944' '13944' '16249']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10629/DSC07280.webp ['10629' '10629' '10627' ..., '15996' '3748' '11661']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10630/DSC07285.webp ['10630' '10630' '10629' ..., '16277' '13839' '13839']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10630/DSC07286.webp ['10630' '10630' '10630' ..., '12523' '12523' '12523']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/10630/DSC07287.webp ['10630' '10627' '10630' ..., '12625' '11588' '12523']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1096/DSC06199.webp ['1096' '1096' '1134' ..., '13827' '13880' '2380']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1096/DSC06200.webp ['1096' '1134' '1096' ..., '2382' '2382' '2380']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1096/DSC06201.webp ['1096' '1096' '1134' ..., '11451' '11451' '16011']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1096/DSC06202.webp ['1096' '1096' '1096' ..., '11451' '16011' '16011']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1098/DSC06179.webp ['1098' '1098' '1098' ..., '6164' '11475' '11467']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1098/DSC06180.webp ['4278' '1625' '1447' ..., '16012' '16011' '16011']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1098/DSC06181.webp ['1098' '1098' '1098' ..., '12573' '12573' '12573']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11248/DSC02453.webp ['11248' '11248' '5076' ..., '6445' '12277' '6445']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1125/DSC06004.webp ['1125' '1125' '1125' ..., '16258' '16258' '16258']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1128/DSC06062.webp ['1128' '1128' '1128' ..., '13875' '13826' '13880']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1128/DSC06063.webp ['1128' '1128' '1128' ..., '13821' '13821' '13880']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1128/DSC06064.webp ['1128' '1128' '1128' ..., '13875' '13875' '13875']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1128/DSC06065.webp ['1128' '1128' '1128' ..., '13880' '16249' '13880']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11299/DSC05201.webp ['11729' '11729' '11729' ..., '15998' '15998' '11326']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11299/DSC05202.webp ['11729' '11729' '11729' ..., '13905' '11326' '13905']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11299/DSC05203.webp ['11729' '11729' '11729' ..., '11326' '13905' '13905']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11299/DSC05204.webp ['11299' '3789' '3789' ..., '15958' '15958' '15978']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11299/DSC05205.webp ['11729' '11729' '11729' ..., '13905' '13905' '13905']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1134/DSC06174.webp ['1096' '1134' '1096' ..., '2382' '12539' '13750']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1134/DSC06175.webp ['1134' '1134' '1134' ..., '12652' '12653' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1134/DSC06176.webp ['1134' '1134' '1134' ..., '12652' '12653' '12652']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/1134/DSC06177.webp ['1928' '1134' '1134' ..., '11435' '13872' '2380']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06454.webp ['11694' '11694' '11694' ..., '3761' '11367' '3761']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06455.webp ['11694' '11694' '11694' ..., '10929' '12607' '10929']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06456.webp ['11694' '11694' '11694' ..., '7673' '13671' '13671']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06457.webp ['11694' '11694' '11694' ..., '10934' '7673' '7673']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06458.webp ['11694' '11694' '11694' ..., '15975' '15960' '15958']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06459.webp ['2923' '2923' '11694' ..., '14077' '14077' '14077']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06460.webp ['11694' '11694' '11694' ..., '15958' '15978' '15978']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06461.webp ['11694' '11694' '11694' ..., '15958' '15978' '15978']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11694/DSC06462.webp ['11694' '11694' '11694' ..., '15965' '15975' '15975']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06432.webp ['11696' '11696' '11698' ..., '2378' '7921' '2381']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06433.webp ['11696' '11696' '11708' ..., '6445' '6445' '9046']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06434.webp ['11698' '11691' '11696' ..., '10165' '12276' '12276']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06435.webp ['11691' '11696' '11696' ..., '6858' '12649' '12649']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06436.webp ['11696' '11696' '11696' ..., '12289' '6858' '13880']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06437.webp ['11696' '11698' '11696' ..., '12626' '12626' '13880']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06438.webp ['11696' '11698' '11698' ..., '12571' '13880' '12571']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06439.webp ['11696' '11696' '11691' ..., '12571' '13880' '13880']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11696/DSC06440.webp ['11696' '11691' '11696' ..., '6856' '15975' '15975']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11712/DSC06276.webp ['11712' '11712' '6266' ..., '11385' '8964' '7938']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11712/DSC06277.webp ['11688' '6212' '11688' ..., '16333' '13915' '13915']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11712/DSC06278.webp ['6778' '11717' '11717' ..., '13915' '16333' '14518']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11712/DSC06279.webp ['391' '6778' '391' ..., '16333' '13712' '13712']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11712/DSC06280.webp ['11717' '11717' '11717' ..., '15967' '16333' '16333']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11712/DSC06281.webp ['11712' '11717' '11712' ..., '6047' '12607' '12590']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06230.webp ['11717' '11717' '6778' ..., '16260' '16260' '16260']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06231.webp ['11717' '11717' '11717' ..., '16260' '14493' '14493']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06232.webp ['6775' '6775' '11717' ..., '11385' '14493' '14493']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06233.webp ['11717' '6266' '6266' ..., '11385' '11451' '7938']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06234.webp ['11717' '11717' '6775' ..., '16333' '14493' '14493']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06235.webp ['11717' '11717' '11717' ..., '11451' '11056' '11056']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06236.webp ['11717' '11717' '11717' ..., '11385' '11385' '8598']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06237.webp ['11717' '11717' '11717' ..., '15958' '8861' '8861']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11717/DSC06238.webp ['11717' '11717' '11717' ..., '16249' '16249' '16249']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11725/DSC06157.webp ['11725' '11725' '11725' ..., '15998' '10924' '15998']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11725/DSC06158.webp ['11725' '6142' '6142' ..., '12626' '12296' '4690']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11725/DSC06159.webp ['11725' '9041' '11725' ..., '12296' '12296' '12296']\n",
+      "/media/lol/LaCie/深度学习-布料库/色卡色样图/几何/11725/DSC06160.webp ['11698' '11688' '11688' ..., '12296' '14103' '14103']\n",
+      "CPU times: user 11min 20s, sys: 708 ms, total: 11min 20s\n",
+      "Wall time: 11min 23s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "t_list = getRank(test_featrue_list[0])"
+    "t_list = []\n",
+    "for idx, i in enumerate(test_featrue_list[:100]):\n",
+    "    t = getRank(i)\n",
+    "    print test_file_path_list[idx], base_class_name_list[t]\n",
+    "    t_list.append(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,15 +207,15 @@
      "output_type": "stream",
      "text": [
       "10341\n",
-      "/media/lol/训练数据/深度学习-布料库-加强版-整理/8333/18.jpg\n",
-      "['10341' '10341' '14415' ... '14084' '16271' '14084']\n",
-      "0.8800258\n"
+      "/home/lol/训练数据/深度学习-布料库-加强版/几何/14414/DSC01527_005.jpg\n",
+      "['10341' '10341' '14415' ..., '14084' '16271' '14084']\n",
+      "0.880026\n"
      ]
     }
    ],
    "source": [
     "print test_class_name_list[0]\n",
-    "print base_file_path_list[0]\n",
+    "print test_file_path_list[0]\n",
     "print base_class_name_list[t_list]\n",
     "print getDistOfCos(test_featrue_list[0], base_featrue_list[t_list[0]])"
    ]
@@ -123,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
