--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -219,6 +219,37 @@
     "print base_class_name_list[t_list]\n",
     "print getDistOfCos(test_featrue_list[0], base_featrue_list[t_list[0]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp = {\n",
+    "    'body': {}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp['body']"
+   ]
   }
  ],
  "metadata": {
